# Thesis

./: .gitignore  .pre-commit-config.yaml  README.md  data_loader.py  docker-compose.yaml  init_postgres.sql  main.py  pyproject.toml  users.py
server/: .env  .env.develop  Dockerfile  README.md  data.ipynb  deploy.Dockerfile  main.py  mypy.ini  pyproject.toml
server/app/: app_flow.py  data_loader.py  event_logger.py
server/app/attributes/: attribute.py  handler.py
server/app/explanations/: __init__.py  abstract.py  content_based.py  content_based_neutral.py  selector.py
server/app/explanations/mixins/: content_based.py
server/app/products/: category.py  explanations.py  handler.py  product.py  simple.py  stopping_criteria.py  unseen_statistics.py
server/app/recommenders/: __init__.py  abstract.py  selector.py  set_based.py  set_based_candidates_only.py  set_based_with_diversity.py  similarity.py  statements_double.py  statements_simple.py
server/app/scripts/: run_server.py
server/app/server/: app.py  context.py  encoder.py  response.py  routes.py  run.py  views.py
server/app/stopping_criteria/: __init__.py  abstract.py  selector.py  stopping_apriori.py  stopping_apriori_with_numerical.py
server/app/utils/: attributes.py  selector.py
server/data/: categories.json
server/data/computers/: attributes.json  products.csv
server/data/laptops/: attributes.json  attributes_rating.csv  mac_large.csv  products.csv  products.json
server/data/tablets/: attributes.json
server/recommenders/: similarity.py  statements_double.py  statements_simple.py
(+125 files in other folders)
